# app/model/user.go
@@ -1,0 +1,41 @@
+// ==========================================================================
+// This is auto-generated by gf cli tool. Fill this file as you wish.
+// ==========================================================================
+
+package model
+
+import (
+	"goframe_learn/app/model/internal"
+	"golang.org/x/crypto/bcrypt"
+)
+
+// User is the golang structure for table user.
+type User internal.User
+
+// Fill with you ideas below.
+
+// 注册请求参数，用于前后端交互参数格式约定
+type UserApiSignUpReq struct {
+	Username string `v:"required|length:5,16#账号不能为空|账号长度应当在:min到:max之间"`
+	Password string `v:"required|length:5,16#请输入确认密码|密码长度应当在:min到:max之间"`
+}
+
+// 注册输入参数
+type UserServiceSignUpReq struct {
+	Username string
+	Password string
+}
+
+const (
+	// PassWordCost 密码加密难度
+	PassWordCost = 12
+)
+
+func (user *UserServiceSignUpReq) DecryptPassword() error {
+	if bytes, err := bcrypt.GenerateFromPassword([]byte(user.Password), PassWordCost); err != nil {
+		return err
+	} else {
+		user.Password = string(bytes)
+		return nil
+	}
+}
